# nhs-patient-feedback-ai

./: .gitignore  LICENSE  Makefile  README.md  app.py  predict.py  pyproject.toml  requirements.txt  train_model.py
.github/workflows/: tests.yml
data/: make_dataset.py  preprocess.py
models/: model.pkl
notebooks/: 01_exploration_and_modelling.ipynb
reports/: executive_summary.md  model_card.md  responsible_ai_risk_assessment.md
tests/: conftest.py  test_predict.py
